# pyedflib

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pypirc  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README-edflib.md  README.md  README.rst  _custom_build.py  appveyor.yml  circle.yml  dev-requirements.txt  pyproject.toml  pytest.ini  readthedocs-requirements.txt  requirements-doc.txt  requirements-test.txt  runtests.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codecov.yml  linters.yml  tests.yml  testz_numpy_2_compatibility.yml  wheels.yml
demo/: plotEDFFile.py  readEDFFile.py  readEDFFile_highlevel.py  stacklineplot.py  streamingEDFFile.py  writeEDFFile.py  writeEDFFile_highlevel.py
doc/: Makefile  make.bat
doc/release/: 0.1.10-notes.rst  0.1.11-notes.rst  0.1.12-notes.rst  0.1.15-notes.rst  0.1.16-notes.rst  0.1.17-notes.rst  0.1.18-notes.rst  0.1.19-notes.rst  0.1.20-notes.rst  0.1.21-notes.rst.txt  0.1.22-notes.rst  0.1.23-notes.rst  0.1.25-notes.rst  0.1.26-notes.rst  0.1.27-notes.rst  0.1.28-notes.rst  0.1.29-notes.rst  0.1.30-notes.rst  0.1.31-notes.rst  0.1.32-notes.rst  0.1.33-notes.rst  0.1.34-notes.rst  0.1.35-notes.rst  0.1.36-notes.rst  0.1.37-notes.rst  0.1.38-notes.rst  0.1.39-notes.rst  0.1.41-notes.rst  0.1.42-notes.rst  0.1.6-notes.rst  0.1.7-notes.rst  0.1.8-notes.rst  0.1.9-notes.rst
doc/source/: conf.py  contents.rst  index.rst  index_header.rst  modules.rst  release.0.1.10.rst  release.0.1.11.rst  release.0.1.12.rst  release.0.1.15.rst  release.0.1.16.rst  release.0.1.17.rst  release.0.1.18.rst  release.0.1.19.rst  release.0.1.20.rst  release.0.1.21.rst  release.0.1.22.rst  release.0.1.23.rst  release.0.1.24.rst  release.0.1.25.rst  release.0.1.26.rst  release.0.1.27.rst  release.0.1.28.rst  release.0.1.29.rst  release.0.1.30.rst  release.0.1.31.rst  release.0.1.32.rst  release.0.1.33.rst  release.0.1.34.rst  release.0.1.35.rst  release.0.1.36.rst  release.0.1.37.rst  release.0.1.38.rst  release.0.1.39.rst  release.0.1.41.rst  release.0.1.42.rst  release.0.1.6.rst  release.0.1.7.rst  release.0.1.8.rst  release.0.1.9.rst  releasenotes.rst  (+1 more)
doc/source/_templates/: editdocument.html  page.html  quicklinks.html
doc/source/dev/: building_extension.rst  how_to_release.rst  index.rst  installing_build_dependencies.rst  preparing_windows_build_environment.rst  testing.rst
doc/source/ref/: edfreader.rst  edfwriter.rst  highlevel.rst  index.rst
pyedflib/: PyEdflib  __init__.py  buffered.py  edfreader.py  edfwriter.py  highlevel.py  setup.py
pyedflib/_extensions/: _pyedflib.pyi  _pyedflib.pyx  c_edf.pxd  edf.pxd  edf.pxi
pyedflib/_extensions/c/: edflib.c  edflib.h  fopen_utf8.c  fopen_utf8.h
pyedflib/data/: __init__.py  _readers.py  test_generator.edf
pyedflib/src/: README.txt  _edflib.pxd  _edflib.pyx  _pyedflib.pyx  c_edf.pxd  edf.pxi  edflib.c
pyedflib/tests/: __init__.py  test_buffered.py  test_doc.py  test_edfreader.py  test_edfwriter.py  test_highlevel.py
pyedflib/tests/data/: test_generator.bdf  test_generator.edf  test_generator_datarec_generator_2.bdf  test_legacy.edf  test_subsecond.edf  test_utf8.edf
travis/: build-wheels.sh
util/: authors.py  cythonize.py  gh_lists.py  refguide_check.py  run.sh  setenv_win.bat  travis_linux_install.sh  travis_osx_install.sh
util/appveyor/: build.cmd  install.ps1  requirements.txt
util/readthedocs/: requirements.txt
