[build-system]
requires = [
    "setuptools",
	"numpy>=1.9.1",
    "cython"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "FLY",  # flynt
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ISC002",  # Implicitly concatenated string literals over multiple lines
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "RUF003",
    "RUF005",  # Consider iterable unpacking instead of concatenation
]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
